making init easier

--- a/angularHTMLLayout/cwLayoutTree/treeGroups.ng.html
+++ b/angularHTMLLayout/cwLayoutTree/treeGroups.ng.html
@@ -45,7 +45,7 @@
         </td>
       </tr>
       <tr ng-if="ng.selectedGroup.type == 'propertyMapping'">
-        <th>Dashed :</th>
+        <th>Property Scriptname to map :</th>
         <td class="cw-edit-property-value">
           <input ng-change="updateTree()" ng-model="ng.selectedGroup.propertyMapping" />
         </td>
